keepalived/parser.output

state 0
	$accept: .statements $end 
	statements: .    (1)

	VRRP_INSTANCE  shift 3
	VIRTUAL_SERVER_GROUP  shift 4
	VIRTUAL_SERVER  shift 5
	.  reduce 1 (src line 42)

	statements  goto 1
	statement  goto 2

state 1
	$accept:  statements.$end 

	$end  accept
	.  error


state 2
	statements:  statement.statements 
	statements: .    (1)

	VRRP_INSTANCE  shift 3
	VIRTUAL_SERVER_GROUP  shift 4
	VIRTUAL_SERVER  shift 5
	.  reduce 1 (src line 42)

	statements  goto 6
	statement  goto 2

state 3
	statement:  VRRP_INSTANCE.IDENT '{' vrrp_instance_stmts '}' 

	IDENT  shift 7
	.  error


state 4
	statement:  VIRTUAL_SERVER_GROUP.IDENT '{' ip_ports '}' 

	IDENT  shift 8
	.  error


state 5
	statement:  VIRTUAL_SERVER.GROUP IDENT '{' virtual_server_stmts '}' 

	GROUP  shift 9
	.  error


state 6
	statements:  statement statements.    (2)

	.  reduce 2 (src line 50)


state 7
	statement:  VRRP_INSTANCE IDENT.'{' vrrp_instance_stmts '}' 

	'{'  shift 10
	.  error


state 8
	statement:  VIRTUAL_SERVER_GROUP IDENT.'{' ip_ports '}' 

	'{'  shift 11
	.  error


state 9
	statement:  VIRTUAL_SERVER GROUP.IDENT '{' virtual_server_stmts '}' 

	IDENT  shift 12
	.  error


state 10
	statement:  VRRP_INSTANCE IDENT '{'.vrrp_instance_stmts '}' 
	vrrp_instance_stmts: .    (6)

	.  reduce 6 (src line 71)

	vrrp_instance_stmts  goto 13

state 11
	statement:  VIRTUAL_SERVER_GROUP IDENT '{'.ip_ports '}' 
	ip_ports: .    (66)

	.  reduce 66 (src line 261)

	ip_ports  goto 14

state 12
	statement:  VIRTUAL_SERVER GROUP IDENT.'{' virtual_server_stmts '}' 

	'{'  shift 15
	.  error


state 13
	statement:  VRRP_INSTANCE IDENT '{' vrrp_instance_stmts.'}' 
	vrrp_instance_stmts:  vrrp_instance_stmts.vrrp_instance_stmt 

	STATE  shift 18
	INTERFACE  shift 19
	GARP_MASTER_DELAY  shift 20
	SMTP_ALERT  shift 21
	VIRTUAL_ROUTER_ID  shift 22
	PRIORITY  shift 23
	ADVERT_INT  shift 24
	AUTHENTICATION  shift 26
	VIRTUAL_IPADDRESS  shift 25
	'}'  shift 16
	.  error

	vrrp_instance_stmt  goto 17

state 14
	statement:  VIRTUAL_SERVER_GROUP IDENT '{' ip_ports.'}' 
	ip_ports:  ip_ports.ip_port 

	IP  shift 29
	'}'  shift 27
	.  error

	ip_port  goto 28

state 15
	statement:  VIRTUAL_SERVER GROUP IDENT '{'.virtual_server_stmts '}' 
	virtual_server_stmts: .    (17)

	.  reduce 17 (src line 113)

	virtual_server_stmts  goto 30

state 16
	statement:  VRRP_INSTANCE IDENT '{' vrrp_instance_stmts '}'.    (3)

	.  reduce 3 (src line 57)


state 17
	vrrp_instance_stmts:  vrrp_instance_stmts vrrp_instance_stmt.    (7)

	.  reduce 7 (src line 73)


state 18
	vrrp_instance_stmt:  STATE.state_type 

	MASTER  shift 32
	BACKUP  shift 33
	.  error

	state_type  goto 31

state 19
	vrrp_instance_stmt:  INTERFACE.IDENT 

	IDENT  shift 34
	.  error


state 20
	vrrp_instance_stmt:  GARP_MASTER_DELAY.NUMBER 

	NUMBER  shift 35
	.  error


state 21
	vrrp_instance_stmt:  SMTP_ALERT.    (11)

	.  reduce 11 (src line 88)


state 22
	vrrp_instance_stmt:  VIRTUAL_ROUTER_ID.NUMBER 

	NUMBER  shift 36
	.  error


state 23
	vrrp_instance_stmt:  PRIORITY.NUMBER 

	NUMBER  shift 37
	.  error


state 24
	vrrp_instance_stmt:  ADVERT_INT.NUMBER 

	NUMBER  shift 38
	.  error


state 25
	vrrp_instance_stmt:  VIRTUAL_IPADDRESS.'{' ipaddresses '}' 

	'{'  shift 39
	.  error


state 26
	vrrp_instance_stmt:  AUTHENTICATION.'{' auth_stmts '}' 

	'{'  shift 40
	.  error


state 27
	statement:  VIRTUAL_SERVER_GROUP IDENT '{' ip_ports '}'.    (4)

	.  reduce 4 (src line 62)


state 28
	ip_ports:  ip_ports ip_port.    (67)

	.  reduce 67 (src line 263)


state 29
	ip_port:  IP.NUMBER 

	NUMBER  shift 41
	.  error


state 30
	statement:  VIRTUAL_SERVER GROUP IDENT '{' virtual_server_stmts.'}' 
	virtual_server_stmts:  virtual_server_stmts.virtual_server_stmt 

	DELAY_LOOP  shift 44
	SORRY_SERVER  shift 50
	LVS_SCHED  shift 45
	LB_ALGO  shift 46
	LVS_METHOD  shift 47
	LB_KIND  shift 48
	PROTOCOL  shift 49
	REAL_SERVER  shift 51
	'}'  shift 42
	.  error

	virtual_server_stmt  goto 43

state 31
	vrrp_instance_stmt:  STATE state_type.    (8)

	.  reduce 8 (src line 75)


state 32
	state_type:  MASTER.    (74)

	.  reduce 74 (src line 277)


state 33
	state_type:  BACKUP.    (75)

	.  reduce 75 (src line 279)


state 34
	vrrp_instance_stmt:  INTERFACE IDENT.    (9)

	.  reduce 9 (src line 80)


state 35
	vrrp_instance_stmt:  GARP_MASTER_DELAY NUMBER.    (10)

	.  reduce 10 (src line 84)


state 36
	vrrp_instance_stmt:  VIRTUAL_ROUTER_ID NUMBER.    (12)

	.  reduce 12 (src line 92)


state 37
	vrrp_instance_stmt:  PRIORITY NUMBER.    (13)

	.  reduce 13 (src line 96)


state 38
	vrrp_instance_stmt:  ADVERT_INT NUMBER.    (14)

	.  reduce 14 (src line 100)


state 39
	vrrp_instance_stmt:  VIRTUAL_IPADDRESS '{'.ipaddresses '}' 
	ipaddresses: .    (64)

	.  reduce 64 (src line 257)

	ipaddresses  goto 52

state 40
	vrrp_instance_stmt:  AUTHENTICATION '{'.auth_stmts '}' 
	auth_stmts: .    (68)

	.  reduce 68 (src line 265)

	auth_stmts  goto 53

state 41
	ip_port:  IP NUMBER.    (78)

	.  reduce 78 (src line 285)


state 42
	statement:  VIRTUAL_SERVER GROUP IDENT '{' virtual_server_stmts '}'.    (5)

	.  reduce 5 (src line 66)


state 43
	virtual_server_stmts:  virtual_server_stmts virtual_server_stmt.    (18)

	.  reduce 18 (src line 115)


state 44
	virtual_server_stmt:  DELAY_LOOP.NUMBER 

	NUMBER  shift 54
	.  error


state 45
	virtual_server_stmt:  LVS_SCHED.lb_algo 

	RR  shift 56
	WRR  shift 57
	LC  shift 58
	WLC  shift 59
	LBLC  shift 60
	SH  shift 61
	DH  shift 62
	.  error

	lb_algo  goto 55

state 46
	virtual_server_stmt:  LB_ALGO.lb_algo 

	RR  shift 56
	WRR  shift 57
	LC  shift 58
	WLC  shift 59
	LBLC  shift 60
	SH  shift 61
	DH  shift 62
	.  error

	lb_algo  goto 63

state 47
	virtual_server_stmt:  LVS_METHOD.lb_kind 

	NAT  shift 65
	DR  shift 66
	TUN  shift 67
	.  error

	lb_kind  goto 64

state 48
	virtual_server_stmt:  LB_KIND.lb_kind 

	NAT  shift 65
	DR  shift 66
	TUN  shift 67
	.  error

	lb_kind  goto 68

state 49
	virtual_server_stmt:  PROTOCOL.TCP 

	TCP  shift 69
	.  error


state 50
	virtual_server_stmt:  SORRY_SERVER.IP NUMBER 

	IP  shift 70
	.  error


state 51
	virtual_server_stmt:  REAL_SERVER.IP NUMBER '{' real_server_stmts '}' 

	IP  shift 71
	.  error


state 52
	vrrp_instance_stmt:  VIRTUAL_IPADDRESS '{' ipaddresses.'}' 
	ipaddresses:  ipaddresses.ipaddress 

	IP  shift 74
	'}'  shift 72
	.  error

	ipaddress  goto 73

state 53
	vrrp_instance_stmt:  AUTHENTICATION '{' auth_stmts.'}' 
	auth_stmts:  auth_stmts.auth_stmt 

	AUTH_TYPE  shift 77
	AUTH_PASS  shift 78
	'}'  shift 75
	.  error

	auth_stmt  goto 76

state 54
	virtual_server_stmt:  DELAY_LOOP NUMBER.    (19)

	.  reduce 19 (src line 117)


state 55
	virtual_server_stmt:  LVS_SCHED lb_algo.    (20)

	.  reduce 20 (src line 122)


state 56
	lb_algo:  RR.    (27)

	.  reduce 27 (src line 151)


state 57
	lb_algo:  WRR.    (28)

	.  reduce 28 (src line 153)


state 58
	lb_algo:  LC.    (29)

	.  reduce 29 (src line 154)


state 59
	lb_algo:  WLC.    (30)

	.  reduce 30 (src line 155)


state 60
	lb_algo:  LBLC.    (31)

	.  reduce 31 (src line 156)


state 61
	lb_algo:  SH.    (32)

	.  reduce 32 (src line 157)


state 62
	lb_algo:  DH.    (33)

	.  reduce 33 (src line 158)


state 63
	virtual_server_stmt:  LB_ALGO lb_algo.    (21)

	.  reduce 21 (src line 126)


state 64
	virtual_server_stmt:  LVS_METHOD lb_kind.    (22)

	.  reduce 22 (src line 130)


state 65
	lb_kind:  NAT.    (34)

	.  reduce 34 (src line 160)


state 66
	lb_kind:  DR.    (35)

	.  reduce 35 (src line 162)


state 67
	lb_kind:  TUN.    (36)

	.  reduce 36 (src line 163)


state 68
	virtual_server_stmt:  LB_KIND lb_kind.    (23)

	.  reduce 23 (src line 134)


state 69
	virtual_server_stmt:  PROTOCOL TCP.    (24)

	.  reduce 24 (src line 138)


state 70
	virtual_server_stmt:  SORRY_SERVER IP.NUMBER 

	NUMBER  shift 79
	.  error


state 71
	virtual_server_stmt:  REAL_SERVER IP.NUMBER '{' real_server_stmts '}' 

	NUMBER  shift 80
	.  error


state 72
	vrrp_instance_stmt:  VIRTUAL_IPADDRESS '{' ipaddresses '}'.    (15)

	.  reduce 15 (src line 104)


state 73
	ipaddresses:  ipaddresses ipaddress.    (65)

	.  reduce 65 (src line 259)


state 74
	ipaddress:  IP.    (76)
	ipaddress:  IP.DEV IDENT 

	DEV  shift 81
	.  reduce 76 (src line 281)


state 75
	vrrp_instance_stmt:  AUTHENTICATION '{' auth_stmts '}'.    (16)

	.  reduce 16 (src line 108)


state 76
	auth_stmts:  auth_stmts auth_stmt.    (69)

	.  reduce 69 (src line 267)


state 77
	auth_stmt:  AUTH_TYPE.auth_type 

	PASS  shift 83
	AH  shift 84
	.  error

	auth_type  goto 82

state 78
	auth_stmt:  AUTH_PASS.expr 

	IDENT  shift 87
	NUMBER  shift 86
	STRING  shift 88
	.  error

	expr  goto 85

state 79
	virtual_server_stmt:  SORRY_SERVER IP NUMBER.    (25)

	.  reduce 25 (src line 142)


state 80
	virtual_server_stmt:  REAL_SERVER IP NUMBER.'{' real_server_stmts '}' 

	'{'  shift 89
	.  error


state 81
	ipaddress:  IP DEV.IDENT 

	IDENT  shift 90
	.  error


state 82
	auth_stmt:  AUTH_TYPE auth_type.    (70)

	.  reduce 70 (src line 269)


state 83
	auth_type:  PASS.    (72)

	.  reduce 72 (src line 273)


state 84
	auth_type:  AH.    (73)

	.  reduce 73 (src line 275)


state 85
	auth_stmt:  AUTH_PASS expr.    (71)

	.  reduce 71 (src line 271)


state 86
	expr:  NUMBER.    (79)

	.  reduce 79 (src line 288)


state 87
	expr:  IDENT.    (80)

	.  reduce 80 (src line 290)


state 88
	expr:  STRING.    (81)

	.  reduce 81 (src line 291)


state 89
	virtual_server_stmt:  REAL_SERVER IP NUMBER '{'.real_server_stmts '}' 
	real_server_stmts: .    (37)

	.  reduce 37 (src line 165)

	real_server_stmts  goto 91

state 90
	ipaddress:  IP DEV IDENT.    (77)

	.  reduce 77 (src line 283)


state 91
	virtual_server_stmt:  REAL_SERVER IP NUMBER '{' real_server_stmts.'}' 
	real_server_stmts:  real_server_stmts.real_server_stmt 

	WEIGHT  shift 94
	INHIBIT_ON_FAILURE  shift 95
	HTTP_GET  shift 96
	SSL_GET  shift 97
	TCP_CHECK  shift 98
	MISC_CHECK  shift 99
	'}'  shift 92
	.  error

	real_server_stmt  goto 93

state 92
	virtual_server_stmt:  REAL_SERVER IP NUMBER '{' real_server_stmts '}'.    (26)

	.  reduce 26 (src line 146)


state 93
	real_server_stmts:  real_server_stmts real_server_stmt.    (38)

	.  reduce 38 (src line 167)


state 94
	real_server_stmt:  WEIGHT.NUMBER 

	NUMBER  shift 100
	.  error


state 95
	real_server_stmt:  INHIBIT_ON_FAILURE.    (40)

	.  reduce 40 (src line 174)


state 96
	real_server_stmt:  HTTP_GET.'{' http_get_stmts '}' 

	'{'  shift 101
	.  error


state 97
	real_server_stmt:  SSL_GET.'{' http_get_stmts '}' 

	'{'  shift 102
	.  error


state 98
	real_server_stmt:  TCP_CHECK.'{' tcp_check_stmts '}' 

	'{'  shift 103
	.  error


state 99
	real_server_stmt:  MISC_CHECK.'{' misc_check_stmts '}' 

	'{'  shift 104
	.  error


state 100
	real_server_stmt:  WEIGHT NUMBER.    (39)

	.  reduce 39 (src line 169)


state 101
	real_server_stmt:  HTTP_GET '{'.http_get_stmts '}' 
	http_get_stmts: .    (45)

	.  reduce 45 (src line 195)

	http_get_stmts  goto 105

state 102
	real_server_stmt:  SSL_GET '{'.http_get_stmts '}' 
	http_get_stmts: .    (45)

	.  reduce 45 (src line 195)

	http_get_stmts  goto 106

state 103
	real_server_stmt:  TCP_CHECK '{'.tcp_check_stmts '}' 
	tcp_check_stmts: .    (52)

	.  reduce 52 (src line 221)

	tcp_check_stmts  goto 107

state 104
	real_server_stmt:  MISC_CHECK '{'.misc_check_stmts '}' 
	misc_check_stmts: .    (56)

	.  reduce 56 (src line 235)

	misc_check_stmts  goto 108

state 105
	real_server_stmt:  HTTP_GET '{' http_get_stmts.'}' 
	http_get_stmts:  http_get_stmts.http_get_stmt 

	URL  shift 115
	CONNECT_PORT  shift 111
	CONNECT_TIMEOUT  shift 112
	NB_GET_RETRY  shift 113
	DELAY_BEFORE_RETRY  shift 114
	'}'  shift 109
	.  error

	http_get_stmt  goto 110

state 106
	real_server_stmt:  SSL_GET '{' http_get_stmts.'}' 
	http_get_stmts:  http_get_stmts.http_get_stmt 

	URL  shift 115
	CONNECT_PORT  shift 111
	CONNECT_TIMEOUT  shift 112
	NB_GET_RETRY  shift 113
	DELAY_BEFORE_RETRY  shift 114
	'}'  shift 116
	.  error

	http_get_stmt  goto 110

state 107
	real_server_stmt:  TCP_CHECK '{' tcp_check_stmts.'}' 
	tcp_check_stmts:  tcp_check_stmts.tcp_check_stmt 

	CONNECT_PORT  shift 119
	CONNECT_TIMEOUT  shift 120
	'}'  shift 117
	.  error

	tcp_check_stmt  goto 118

state 108
	real_server_stmt:  MISC_CHECK '{' misc_check_stmts.'}' 
	misc_check_stmts:  misc_check_stmts.misc_check_stmt 

	MISC_PATH  shift 123
	MISC_TIMEOUT  shift 124
	'}'  shift 121
	.  error

	misc_check_stmt  goto 122

state 109
	real_server_stmt:  HTTP_GET '{' http_get_stmts '}'.    (41)

	.  reduce 41 (src line 178)


state 110
	http_get_stmts:  http_get_stmts http_get_stmt.    (46)

	.  reduce 46 (src line 197)


state 111
	http_get_stmt:  CONNECT_PORT.NUMBER 

	NUMBER  shift 125
	.  error


state 112
	http_get_stmt:  CONNECT_TIMEOUT.NUMBER 

	NUMBER  shift 126
	.  error


state 113
	http_get_stmt:  NB_GET_RETRY.NUMBER 

	NUMBER  shift 127
	.  error


state 114
	http_get_stmt:  DELAY_BEFORE_RETRY.NUMBER 

	NUMBER  shift 128
	.  error


state 115
	http_get_stmt:  URL.'{' url_stmts '}' 

	'{'  shift 129
	.  error


state 116
	real_server_stmt:  SSL_GET '{' http_get_stmts '}'.    (42)

	.  reduce 42 (src line 182)


state 117
	real_server_stmt:  TCP_CHECK '{' tcp_check_stmts '}'.    (43)

	.  reduce 43 (src line 186)


state 118
	tcp_check_stmts:  tcp_check_stmts tcp_check_stmt.    (53)

	.  reduce 53 (src line 223)


state 119
	tcp_check_stmt:  CONNECT_PORT.NUMBER 

	NUMBER  shift 130
	.  error


state 120
	tcp_check_stmt:  CONNECT_TIMEOUT.NUMBER 

	NUMBER  shift 131
	.  error


state 121
	real_server_stmt:  MISC_CHECK '{' misc_check_stmts '}'.    (44)

	.  reduce 44 (src line 190)

